--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
-    "@types/react-redux": "^7.1.23",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux-saga": "^0.10.5",
+    "lodash.get": "^4.4.2",
     "lodash.orderby": "^4.6.0",
     "lodash.pick": "^4.4.0",
     "react": "^17.0.2",
@@ -24,7 +26,10 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.2.0",
-    "redux": "^4.1.2",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -53,6 +58,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.get": "^4.4.7",
     "@types/lodash.orderby": "^4.6.6",
     "@types/lodash.pick": "^4.4.6",
     "@types/react-router-dom": "^5.3.3"
